--- a/templates/cart_item/index.html.twig
+++ b/templates/cart_item/index.html.twig
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <div class="product-image-container">
                     <img src="{{ asset('styles/' ~ produit.image) }}" alt="{{ produit.name }}" class="img-fluid"
-                         onerror="this.src='{{ asset('styles/img/product01.png') }}'">
+                         onerror="this.src='{{ asset('styles/img/laptop1.png') }}'">
                 </div>
             </div>
 
