--- a/templates/cart_item/update.html.twig
+++ b/templates/cart_item/update.html.twig
@@ -14,7 +14,7 @@
                          alt="{{ produit.name }}"
                          class="img-fluid"
                          style="max-width: 200px; max-height: 200px; object-fit: contain;"
-                         onerror="this.src='{{ asset('styles/img/product01.png') }}'">
+                         onerror="this.src='{{ asset('styles/img/laptop1.png') }}'">
                 </div>
             </div>
 
