--- a/templates/wish_list/index.html.twig
+++ b/templates/wish_list/index.html.twig
@@ -32,7 +32,7 @@
                                                 <div class="product-thumb">
                                                     <img src="{{ asset('styles/' ~ item.image) }}"
                                                          alt="{{ item.name }}"
-                                                         onerror="this.src='{{ asset('styles/img/product01.png') }}'"
+                                                         onerror="this.src='{{ asset('styles/img/laptop1.png') }}'"
                                                          style="max-width: 80px; max-height: 80px; object-fit: contain;">
                                                 </div>
                                                 <div class="product-info">
