--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -78,7 +78,7 @@
                                 <div class="cart-list">
                                     <div class="product-widget">
                                         <div class="product-img">
-                                            <img src="{{ asset('styles/img/product01.png') }}" alt="">
+                                            <img src="{{ asset('styles/img/laptop1.png') }}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -89,7 +89,7 @@
 
                                     <div class="product-widget">
                                         <div class="product-img">
-                                            <img src="{{ asset('styles/img/product02.png') }}" alt="">
+                                            <img src="{{ asset('styles/img/accessoire1.png') }}" alt="">
                                         </div>
                                         <div class="product-body">
                                             <h3 class="product-name"><a href="#">product name goes here</a></h3>
