--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -43,7 +43,7 @@
                                             <div class="product-thumb">
                                                 <img src="{{ asset('styles/' ~ item.produit.image) }}"
                                                      alt="{{ item.produit.name }}"
-                                                     onerror="this.src='{{ asset('styles/img/product01.png') }}'"
+                                                     onerror="this.src='{{ asset('styles/img/laptop1.png') }}'"
                                                      style="max-width: 80px; max-height: 80px; object-fit: contain;">
                                             </div>
                                             <div class="product-info">
