--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -45,7 +45,10 @@
         <div class="col-md-4 col-xs-6">
             <div class="product">
                 <div class="product-img">
-                    <img src="{{ asset('styles/' ~ produit.getImage()) }}" alt="{{ produit.name }}" class="img-fluid">
+                    <img src="{{ asset('styles/' ~ produit.getImage()) }}"
+                         alt="{{ produit.name }}"
+                         class="img-fluid"
+                         style="width: 180px; height: 180px; object-fit: contain;">
                 <div class="product-label">
                         <span class="new">NEW</span>
                     </div>
