--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -4,13 +4,17 @@
     <div id="top-header">
         <div class="container">
             <ul class="header-links pull-left">
-                <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+                <li style="color: white;"><i class="fa fa-phone"></i> 85 555</li>
+                <li style="color: white;"><i class="fa fa-envelope-o"></i> echriPC@gmail.com</li>
+                <li style="color: white;"><i class="fa fa-map-marker"></i> INSAT - Centre Urbain </li>
             </ul>
             <ul class="header-links pull-right">
-                <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                {% if app.user is not null %}
+                    <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                    <li><a href="#"><i class="fa fa-sign-out"></i> Logout </a></li>
+                {% else %}
+                    <li><a href="/register"><i class="fa fa-user-o"></i> Register </a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -24,10 +28,10 @@
             <div class="row">
                 <!-- LOGO -->
                 <div class="col-md-3">
-                    <div class="header-logo">
-                        <a href="{{ url('admin.home') }}" class="logo">
-                            <img src="{{ asset('styles/img/logo.png') }}" alt="">
-                            <h3>Admin Space</h3>
+                    <div class="header-logo" style="display: flex; align-items: center;">
+                        <a href="{{ url('admin.home') }}" class="logo" style="display: flex; align-items: center;">
+                            <img src="{{ asset('styles/img/logo.jpg') }}" alt="" style="width: 130px; height: auto; margin-right: 10px;">
+                            <h3 style="margin: 0;">Admin Space</h3>
                         </a>
                     </div>
                 </div>
