Adding login logout buttons

--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -11,9 +11,10 @@
             <ul class="header-links pull-right">
                 {% if app.user is not null %}
                     <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
-                    <li><a href="#"><i class="fa fa-sign-out"></i> Logout </a></li>
+                    <li><a href={{ path('app_logout') }}><i class="fa fa-sign-out"></i> Logout </a></li>
                 {% else %}
                     <li><a href="/register"><i class="fa fa-user-o"></i> Register </a></li>
+                    <li><a href={{ path('app_login') }}><i class="fa fa-sign-in"></i> Login </a></li>
                 {% endif %}
             </ul>
         </div>
