Edited admin_view footer

--- a/templates/admin_fragments/footer.html.twig
+++ b/templates/admin_fragments/footer.html.twig
@@ -10,11 +10,11 @@
                 <div class="col-md-3 col-xs-6">
                     <div class="footer">
                         <h3 class="footer-title">About Us</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+                        <p>At echriPC, we bring you the latest and greatest in tech—computers, accessories, and gadgets—all in one place. Our mission is to make high-quality technology accessible, affordable, and just a click away.</p>
                         <ul class="footer-links">
-                            <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                            <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                            <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+                            <li><i class="fa fa-map-marker"></i>INSAT - Tunis</li>
+                            <li><i class="fa fa-phone"></i>85 555</li>
+                            <li><i class="fa fa-envelope-o"></i>echrPC@gmail.com</li>
                         </ul>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                     <div class="footer">
                         <h3 class="footer-title">Categories</h3>
                         <ul class="footer-links">
-                            <li><a href="#">Hot deals</a></li>
+                            <li><a href="#">All</a></li>
                             <li><a href="#">Laptops</a></li>
                             <li><a href="#">Smartphones</a></li>
                             <li><a href="#">Cameras</a></li>
@@ -52,9 +52,6 @@
                         <h3 class="footer-title">Service</h3>
                         <ul class="footer-links">
                             <li><a href="#">My Account</a></li>
-                            <li><a href="#">View Cart</a></li>
-                            <li><a href="#">Wishlist</a></li>
-                            <li><a href="#">Track My Order</a></li>
                             <li><a href="#">Help</a></li>
                         </ul>
                     </div>
@@ -72,19 +69,10 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <ul class="footer-payments">
-                        <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-                        <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-                    </ul>
                     <span class="copyright">
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							</span>
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+                    </span>
+
                 </div>
             </div>
             <!-- /row -->
