--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -26,8 +26,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path('app_register') }}">
-                                    <i class="fa fa-user-plus"></i> Add Account
+                                <a href="{{ path('app_login') }}">
+                                    <i class="fa fa-sign-in"></i> Change Account
                                 </a>
                             </li>
                         </ul>
