--- a/templates/command/index.html.twig
+++ b/templates/command/index.html.twig
@@ -60,46 +60,23 @@
                             <div><strong class="order-total">{{ total }}</strong></div>
                         </div>
                     </div>
-                    <div class="payment-method">
-                        <div class="input-radio">
-                            <input type="radio" name="payment" id="payment-1">
-                            <label for="payment-1">
-                                <span></span>
-                                Direct Bank Transfer
-                            </label>
-                            <div class="caption">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-                        <div class="input-radio">
-                            <input type="radio" name="payment" id="payment-2">
-                            <label for="payment-2">
-                                <span></span>
-                                Cheque Payment
-                            </label>
-                            <div class="caption">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-                        <div class="input-radio">
-                            <input type="radio" name="payment" id="payment-3">
-                            <label for="payment-3">
-                                <span></span>
-                                Paypal System
-                            </label>
-                            <div class="caption">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
-                    </div>
+
+
                     <div class="input-checkbox">
-                        <input type="checkbox" id="terms">
+                        <input type="checkbox" id="terms" required>
                         <label for="terms">
                             <span></span>
-                            I've read and accept the <a href="#">terms & conditions</a>
+                            I've read and accept the <a href="#" >terms & conditions</a>
                         </label>
                     </div>
-                    <a href="{{ path('app_place_order',{'id':cart.id})}} " class="primary-btn order-submit">Place order</a>
+                    <a href="{{ path('app_place_order',{'id':cart.id})}} " class="primary-btn order-submit">Pay On Delivery</a>
+                    <a
+                            class="primary-btn order-submit"
+                            id="proceedToPayment"
+                            data-verified="{{ app.user and app.user.isVerified ? 'true' : 'false' }}"
+                            href="{{ path('create_payment_link', {'id': cart.id, 'total': total}) }}">
+                        Proceed to Online Payment
+                    </a>
 
                 </div>
 
