--- a/templates/fragments/footer.html.twig
+++ b/templates/fragments/footer.html.twig
@@ -38,7 +38,7 @@
                                 <li><a href="{{ path('app_cart') }}">View Cart</a></li>
                                 <li><a href="{{ path('app_wish_list') }}">Wishlist</a></li>
                                 <li>
-                                    <a href="#" data-toggle="modal" data-target="#verifyModal">
+                                    <a href="#" data-toggle="modal" data-target="#logoutModal">
                                         Logout
                                     </a>
                                 </li>
