--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -34,7 +34,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#verifyModal">
+                        <a href="#" data-toggle="modal" data-target="#logoutModal">
                             <i class="fa fa-sign-out"></i> Logout
                         </a>
                     </li>
