--- a/templates/fragments/logout_modal.html.twig
+++ b/templates/fragments/logout_modal.html.twig
@@ -1,4 +1,4 @@
-<div class="modal fade" id="verifyModal" tabindex="-1" role="dialog" aria-labelledby="verifyModalLabel" aria-hidden="true">
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="verifyModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content shadow-lg">
             <div class="modal-header" style="background-color: #2B2D42; color: #fff; font-family: 'Montserrat', sans-serif;">
