--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block emplacement %} {% if category is not null %}{{ category }} {% endif %}{% endblock %}
 {% block store %}
+{% for type, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ type}} ">
+            {{message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 <div id="store" class="col-md-9">
     <!-- store top filter -->
     <div class="store-filter clearfix">
