--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -22,7 +22,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="{{ path('app_order_history') }}">
                                     <i class="fa fa-history"></i> Order History
                                 </a>
                             </li>
