--- a/templates/admin_view/product-form.html.twig
+++ b/templates/admin_view/product-form.html.twig
@@ -56,7 +56,7 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <div class="form-group">
-                    {{ form_label(form.categorie, 'Categorie') }}
+                    {{ form_label(form.categorie, 'Category') }}
                     {{ form_widget(form.categorie, {'attr': {'class': 'form-control'}}) }}
                     {{ form_errors(form.categorie) }}
                 </div>
