--- a/templates/admin_fragments/navigation.html.twig
+++ b/templates/admin_fragments/navigation.html.twig
@@ -9,7 +9,8 @@
                 <li><a href="{{ url('produit.list') }}" class="{{ role == 'products' ? 'active' : '' }}">Products List</a></li>
                 <li><a href="{{ url('app_create_produit') }}" class="{{ role == 'products' ? 'active' : '' }}">Add Product</a></li>
                 <li><a href="{{ url('orders.list') }}" class="{{ role == 'orders' ? 'active' : '' }}">Orders List</a></li>
-                <li><a href="#">Statistics</a></li>
+                <li><a href="{{ url('admin_statistics_categories') }}">Statistics</a></li>
+
             </ul>
         </div>
     </div>
