--- a/templates/admin_view/orders-list.html.twig
+++ b/templates/admin_view/orders-list.html.twig
@@ -18,36 +18,65 @@
 
     <div class="container mt-4">
         <h1>Orders List</h1>
-
-{#        <table id="ordersTable" class="table table-bordered datatable">
+        {% set i = true %}
+        {% for commande in commandes %}
+        {% if commande.utilisateur.id == user_id and i  %}
+            <h2>History of orders by {{ commande.utilisateur.name }} </h2>
+            {% set i = false %}
+        {% endif %}
+        {% endfor %}
+        <table id="ordersTable" class="table table-bordered datatable">
             <thead>
             <tr>
                 <th>ID</th>
-                <th>Name</th>
-                <th>Categorie</th>
-                <th>Description</th>
+                <th>User</th>
+                <th>Created At</th>
+                <th>Items</th>
+                <th>Total Price</th>
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
-            {% for produit in produits %}
-                <tr>
-                    <td>{{ produit.id }}</td>
-                    <td>{{ produit.name }}</td>
-                    <td class="product-category">{{ produit.categorie.name }}</td>
-                    <td>{{ produit.description }}</td>
-                    <td>
-                        <a href="{{ url('app_create_produit', {id: produit.id}) }}" ><i class="fa fa-pencil-square-o"></i></a>
-                        &nbsp;
-                        <a href="{{ url('produit.delete', {id: produit.id}) }}" ><i class="fa fa-trash"></i></a>
-                        &nbsp;
-                        <a href="#" ><i class="fa fa-eye"></i></a>
-                    </td>
-                </tr>
+            {% for commande in commandes %}
+                {% if user_id == 0 or commande.utilisateur.id == user_id %}
+                    <tr>
+                        <td>{{ commande.id }}</td>
+                        <td>{{ commande.utilisateur.name }}</td>
+                        <td>{{ commande.createdAt|date('Y-m-d H:i') }}</td>
+                        <td>
+                            {{ commande.cartItems|reduce((carry, item) => carry + item.quantité, 0) }}
+                        </td>
+                        <td>
+                            €{{ commande.cartItems|reduce((carry, item) => carry + (item.produit.price * item.quantité), 0) }}
+                        </td>
+                        <td class="text-center">
+                            <a href="{{ path('orders.view', {id: commande.id}) }}" ><i class="fa fa-eye"></i></a>
+                        </td>
+                    </tr>
+                {% endif %}
             {% endfor %}
             </tbody>
-        </table>#}
+        </table>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        $(document).ready(function () {
+            $('#ordersTable').DataTable({
+                responsive: true,
+                language: {
+                    search: "Search:",
+                    lengthMenu: "Show _MENU_ entries",
+                    info: "Showing _START_ to _END_ of _TOTAL_ entries",
+                    paginate: {
+                        previous: "Previous",
+                        next: "Next"
+                    }
+                }
+            });
+        });
+    </script>
 {% endblock %}
 
 {% block footer %}
